tests/snapshots/motion_edge_cases_test__f_tab.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:5
Lines: 1

Buffer:
hello[	]world
