tests/snapshots/motion_edge_cases_test__j_count_exceeds_buffer.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 3

Buffer:
line 1
line 2
[l]ine 3
