tests/snapshots/motion_edge_cases_test__j_from_short_to_long.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:1
Lines: 2

Buffer:
hi
h[e]llo world
