tests/snapshots/motion_edge_cases_test__j_preserves_column.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:4
Lines: 3

Buffer:
hello world test
short
hell[o] again test
