tests/snapshots/motion_edge_cases_test__j_to_shorter_line.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:1
Lines: 3

Buffer:
hello world
h[i]
test
