tests/snapshots/motion_edge_cases_test__k_at_first_line.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 3

Buffer:
[l]ine 1
line 2
line 3
