tests/snapshots/motion_edge_cases_test__k_preserves_column.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 3

Buffer:
hell[o] world test
short
hello again test
